--- a/styles/theTrendingStyle.css
+++ b/styles/theTrendingStyle.css
@@ -2383,11 +2383,27 @@ video {
   background-color: #9F72DA;
   background-color: rgba(159, 114, 218, var(--bg-opacity));
 }
-
+.bg-green {
+  --bg-opacity: 1;
+  background-color: #52B45F;
+  background-color: rgba(82, 180, 95, var(--bg-opacity));
+}
 .bg-blurple {
   --bg-opacity: 1;
   background-color: #7289DA;
   background-color: rgba(114, 137, 218, var(--bg-opacity));
+}
+
+.bg-bromush {
+  --bg-opacity: 1;
+  background-color: #324C59;
+  background-color: rgba(50, 76, 89, var(--bg-opacity));
+}
+
+.bg-bro {
+  --bg-opacity: 1;
+  background-color: #9BCDAB;
+  background-color: rgba(155, 295, 171, var(--bg-opacity));
 }
 
 .hover\:bg-transparent:hover {
@@ -2967,7 +2983,16 @@ video {
   background-color: #9F72DA;
   background-color: rgba(159, 114, 218, var(--bg-opacity));
 }
-
+.hover\:bg-bromush:hover {
+  --bg-opacity: 1;
+  background-color: #9bcdab;
+  background-color: rgba(155, 205, 171, var(--bg-opacity));
+}
+.hover\:bg-green:hover {
+  --bg-opacity: 1;
+  background-color: #8ec6a0;
+  background-color: rgba(142, 198, 160, var(--bg-opacity));
+}
 .hover\:bg-blurple:hover {
   --bg-opacity: 1;
   background-color: #7289DA;
@@ -4280,6 +4305,18 @@ video {
   --border-opacity: 1;
   border-color: #7289DA;
   border-color: rgba(114, 137, 218, var(--border-opacity));
+}
+
+.border-bromush {
+  --border-opacity: 1;
+  border-color: #324C59;
+  border-color: rgba(50, 76, 89, var(--border-opacity));
+}
+
+.border-bro {
+  --border-opacity: 1;
+  border-color: #9BCDAB;
+  border-color: rgba(155, 205, 171, var(--border-opacity));
 }
 
 .hover\:border-transparent:hover {
@@ -5788,6 +5825,10 @@ video {
 
 .border {
   border-width: 1px;
+}
+
+.circle {
+    border-radius:50%;
 }
 
 .border-t-0 {
@@ -14220,7 +14261,16 @@ video {
   color: #9F72DA;
   color: rgba(159, 114, 218, var(--text-opacity));
 }
-
+.text-bromush {
+  --text-opacity: 1;
+  color: #b3c1ca;
+  color: rgba(179, 193, 202, var(--text-opacity));
+}
+.text-bro {
+  --text-opacity: 1;
+  color: #9BCDAB;
+  color: rgba(155, 205, 171, var(--text-opacity));
+}
 .text-blurple {
   --text-opacity: 1;
   color: #7289DA;
